--- a/react/edu/rt11-01.컴포넌트상태관리-useState.html
+++ b/react/edu/rt11-01.컴포넌트상태관리-useState.html
@@ -13,7 +13,7 @@
 
 <body>
     <pre>
-        함수 컴포넌트
+        함수 컴포넌트 훅 종류
             useState() 훅
             useEffect() 훅
             useRef() 훅
