--- a/react/edu/rt07-01.컴포넌트.html
+++ b/react/edu/rt07-01.컴포넌트.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>rt07-01.컴포넌트</title>
 
     <link rel="stylesheet" href="../css/reset.css" />
   </head>
 
   <body>
-    <xmp
->
+    <xmp>
         컴포넌트는 무엇인가?
 
         컴포넌트의 종류
