--- a/react/edu/rt07-03.React페이지구조이해.html
+++ b/react/edu/rt07-03.React페이지구조이해.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible"
-      content="ie=edge" />
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>React페이지구조이해</title>
 
-    <link rel="stylesheet"
-      href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
   </head>
 
   <body>
